fix(query): report failed statements as failures, and tighten the connection lifecycle
A statement that fails still gets "processed", and Query completed its
future successfully from that callback. A BACKUP or RESTORE that the
server rejected therefore produced an empty result set that every caller
read as success - the user was told the backup had been made. Query now
watches the auditor for the error message belonging to its own statement
and completes exceptionally with it, so the failure reaches the caller
with the server's own wording.

That watching needs consumers to be removable, which they weren't:
Auditor kept them in a HashSet that only ever grew, so every operation
left its listener behind to react to the next one's messages, and the
set was mutated from the database thread while being read from the EDT.
It is now a CopyOnWriteArrayList with a remove.

Client's use count had the same threading problem - a plain int
incremented from the EDT, from background tasks and from the database
thread that completes a query. Closing more often than opening (which
Download did on its failure path) drove it below zero, after which the
session was never disconnected at all. It is now an AtomicInteger that
floors at zero, with a flag so the disconnect happens exactly once.

Finally, QueryHelper held every client it ever created in a plain
ArrayList and never removed any, pinning each session - and through it
the project - for the lifetime of the IDE. Finished clients are now
dropped, and a client nobody has let go of yet is left alone.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QPhMuFtwcuEaWBcLeF4CNC